# monkey-logs

.bmad-core/: install-manifest.yaml
apps/api/: .pylintrc  mypy.ini  pyproject.toml  pyrightconfig.json
apps/api/auth/infrastructure/api/: user_api_model.py
apps/api/src/ascend/: main.py
apps/api/src/ascend/auth/application/: user_services.py
apps/api/src/ascend/auth/domain/: user.py  user_repository.py
apps/api/src/ascend/auth/infrastructure/: database.py  routers.py  user_repository.py
apps/api/src/ascend/tests/: conftest.py  test_user_creation.py
docs/: architecture.md  back-end-architecture.md  front-end-architecture.md  prd.md  project-brief.md
docs/stories/: 1.1.user-registration-endpoint.md  1.2.jwt-authentication.md  2.1.create-workout.md  2.2.log-exercise.md  2.3.list-workouts.md  2.4.get-workout-details.md  2.5.update-exercise-log.md  2.6.delete-exercise-log.md  3.1.create-workout-template.md  3.2.list-workout-templates.md  3.3.get-workout-template.md  3.4.update-workout-template.md  3.5.delete-workout-template.md  4.1.create-exercise.md  4.2.list-exercises.md  4.3.get-exercise-details.md  4.4.update-exercise.md  4.5.delete-exercise.md
