[tool.poetry]
name = "ascend"
version = "0.1.0"
description = ""
authors = ["Ruben Gardner <ruben.gardner@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
sqlmodel = "^0.0.25"
psycopg2-binary = "^2.9.10"
bcrypt = "^5.0.0"
python-jose = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
