[tool.poetry]
name = "ascend"
version = "0.1.0"
description = ""
authors = ["Ruben Gardner <ruben.gardner@example.com>"]
readme = "README.md"
packages = [{include = "ascend_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
sqlmodel = "^0.0.25"
psycopg2-binary = "^2.9.10"
bcrypt = "^5.0.0"
python-jose = "^3.5.0"
pydantic = {extras = ["email"], version = "^2.11.9"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
